--- a/app/template/_footer.html
+++ b/app/template/_footer.html
@@ -5,7 +5,7 @@
 				<p class="title__information">О компании</p>
 				<div class="footer__menu">
 					<ul>
-						<li>- <a href="/about.html" title="О компании">О компании</a></li>
+						<li>- <a href="/page.html" title="О компании">О компании</a></li>
 						<li>- <a href="/zelenyi-tarif.htm" title="Зеленый тариф">Зеленый тариф</a></li>
 						<li>- <a href="/projects.html" title="Наши проекты">Наши проекты</a></li>
 						<li>- <a href="/" title="/">Вопрос / ответ</a></li>
