--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -42,9 +42,9 @@
                     <nav class="navigation">
                         <ul>
                             <li class="dropdown">
-                                <a href="/about.html" title="О компании">О компании <span class="lnr lnr-chevron-down"></span></a>
+                                <a href="/page.html" title="О компании">О компании <span class="lnr lnr-chevron-down"></span></a>
                                 <ul>
-                                    <li><a href="/news.html" title="Сервис и обслуживание">Новости</a></li>
+                                    <li><a href="/sections.html" title="Сервис и обслуживание">Новости</a></li>
                                     <li><a href="/" title="Сервис и обслуживание">Вопрос / ответ</a></li>
                                 </ul>
                             </li>
