--- a/app/css/_animation.scss
+++ b/app/css/_animation.scss
@@ -5,7 +5,6 @@
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
-  
 .animated.hinge {
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
@@ -74,7 +73,38 @@
     -webkit-animation-name: fadeInRightBig;
     animation-name: fadeInRightBig;
 }
-
+@-webkit-keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(20px);
+      transform: translateY(20px);
+    }
+  
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+}
+@keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(20px);
+      -ms-transform: translateY(20px);
+      transform: translateY(20px);
+    }
+  
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+    }
+}
+.fadeInUp {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
+}
 /* fixed navigation */
 @keyframes fixed_nav {
 	0% {
@@ -84,7 +114,6 @@
 		transform: translate(0, 0);
 	}
 }
-
 /* owl animation */
 @keyframes empty {
     0% {
