--- a/app/css/_errors.scss
+++ b/app/css/_errors.scss
@@ -1,17 +1,21 @@
+.error__404 {
+	font-size: 80px;
+    color: $reveal-error;
+    font-weight: 700;
+    text-align: center;
+    line-height: 100px;
+}
+
+
+
 .error-404 {
 	padding: 0px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.b404 {
-	padding-left:0px;
-    font-size: 90px;
-    color: #F90909;
-    font-weight: 700;
-    text-align: center;
-}
+
 .text404-error {
-	margin-top: 15px;
+	text-align: center;
 }
 .text404-error p {
 	margin-bottom: 6px;
@@ -23,7 +27,7 @@
 }
 .b404-error {
     font-size: 57px;
-    color: #F90909;
+    color: $reveal-error;
     font-weight: 700;
     text-align: center;
     vertical-align: middle;
