--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 24px;
 }
 b, strong {
-    font-weight: 700;
+    font-weight: 500;
 }
 p {
     margin-bottom: 15px;
@@ -65,18 +65,12 @@ img {
     border-style: none;
     vertical-align: middle;
 }
-ul {
-    list-style: none;
-    list-style-image: none;
-    margin-bottom: 15px;
-    margin-left: 55px;
-    padding: 5px 0;
-}
 article ul {
     list-style: none;
     list-style-image: none;
+    margin-left: 55px;
+    margin-bottom: 15px;
     padding: 0px;
-    margin: 0px;
    
     li {
         list-style: none;
@@ -89,7 +83,7 @@ article ul {
             border-radius: 50%;
             text-align: center;
             color: #fff;
-            background: #0b1875;
+            background: #ff8400;
             width: 10px;
             height: 10px;
             font-size: 7px;
