--- a/app/css/_forms.scss
+++ b/app/css/_forms.scss
@@ -54,11 +54,10 @@
     width: 100%;
     color: #fff;
     font-size: 14px;
-    background: $reveal-error;
     display: inline-block;
     line-height: normal;
-    margin: 5px 0;
-    padding: 5px 20px;
+    margin-bottom: 10px;
+    padding: 10px 20px;
     text-align: center;
 }
 .occurred {
