--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="header__navigation">
-        <div class="container">
+        <div class="container-full">
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2">
                     <div class="logo">
