--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -1,591 +1,34 @@
-@media (max-width:1290px) and (min-width:1201px) {
-	.navigation li a {
-		font-size: 15px;
-	}
-	.btn__header {
-		margin-top: 5px;
-	}
-	.preim-title {
-		font-size: 19px;
-	}
-}	
+@media (max-width:1340px) and (min-width:1200px) {
 
-@media (max-width:1200px) and (min-width:991px) {
-	.wrapper-padding {
-		padding: 0 20px;
-	}
-	
-	h1, h2, h3, h4, h5, h6 {
-		font-size: 20px;
-	}
-	
-	.slider_arrow_left {
-		left: 0;
-	}
-	.slider_arrow_right {
-		right: 0;
-	}
-	.slider-carousel .slider_arrow_left {
-		left: 1%;
-		top: 40%
-	}
-	.slider-carousel .slider_arrow_right {
-		right: 1%;
-		top: 40%
-	}
-	.search_modal_wrapper {
-		margin: 0 100px;
-	}
-	.title-slider_main {
-		font-size: 2.6em;
-	}
-	.section-index .title-pub {
-		padding: 5px 0px;
-	}
-	.wrapper-slider_main {
-		padding: 0 60px;
-	}
-	.margin__centered {
-		margin: 0px;
-	}
-	.dpn-side-tmp1 {
-		margin: 0px 0 20px;
-	}
-	
-	.list-header li {
-		margin: 0 5px 0 0;
-	}
-	.header-social {
-		margin: 0px 0 0 20px;
-	}
-	.language {
-		margin: 0px 0 0 20px;
-	}
-	
-	#logo img {
-		padding: 0px;
-		width: 100%;
-	}
-	#nav-fixed.fixed .navigation {
-		margin: 12px 0 0px;
-	}
-	.b-small {
-		padding: 10px 18px;
-		font-size: 14px;
-	}
 	.navigation {
-		margin: 12px 0 0px;
+		margin: 20px 0px 0px 50px;
+	}
+	.header__navigation.fixed .navigation {
+		margin: 10px 0px 0px 50px;
 	}
 	.navigation li a {
 		display: inline-block;
-		padding: 0px 10px 0px 10px;
-		font-size: 18px;
-	}
-	.navigation li .lnr {
-		font-size: 30px;
-	}
-	.btn__header {
-		margin-top: 10px;
+    	padding: 5px 12px 5px 12px;
+   		font-size: 16px;
 	}
 	
-	.preim-title {
-		font-size: 16px;
-		padding: 0;
-	}
 }
 
 @media (max-width:800px) and (min-width:599px) {
-	h1, h2, h3, h4, h5, h6 {
-		font-size: 18px;
-	}
-	
-	#map {
-		margin-bottom: 20px;
-	}
-	.feedback-control {
-		margin: 0 0px;
-	}
-	.logo__odesskiy img {
-    width: 45%;
-	}
-	
-	.slider_arrow_left {
-		left: 10px;
-	}
-	.slider_arrow_right {
-		right: 10px;
-	}	
-	.wrapper-padding {
-		padding: 5px;
-	}
-	#logo {
-		border-right: none;
-		text-align: center;
-	}
-	#logo img {
-		width: 55%
-	}
-	.header__line {
-		background: none;
-		padding: 5px 0 0;
-	}
-	.language {
-		margin: 0;
-		text-align: center;
-	}
-	.header-social {
-		list-style: none;
-		margin: 0px;
-		padding: 0;
-		text-align: center;
-	}
-	.header-social li, .language li {
-		line-height: 22px;
-	}
-	.sec-title .separator:before {
-		width: 200px;
-	}
-	.btn__header {
-		margin-top: 0;
-	}
-	.navigation {
-		background: #fafafa;
-		margin: 0;
-	}
-	.navigation ul {
-		float: left;
-		width: 100%;
-		text-align: center;
-	}
-	.navigation li a {
-		display: inline-block;
-		padding: 5px 30px;
-		cursor: pointer;
-		font-size: 18px;
-	}
-	.navigation li a:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.navigation li .lnr {
-		font-size: 20px;
-	}
-	.navigation li.trigger-sbc span:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.sec-title .man-title, .sec-title h1, .sec-title h2, .sec-title h3, .sec-title h4 {
-		font-size: 24px;
-		padding: 0;
-	}
-	.slider-wrapper {
-		background-color: #1c1c1c;
-		background-position: center center;
-	}
-	.wrapper-slider_main {
-		padding: 0 100px;
-	}
-	.title-slider_main {
-		font-size: 30px;
-	}
-	.dpn-slider_main {
-		font-size: 18px;
-	}
-	.preim-title {
-		font-size: 17px;
-		padding: 0px;
-	}	
+
 }
 
 @media (max-width:768px) and (min-width:600px) {
-	.feedback-control {
-		margin: 0 20px;
-	}
-	#map {
-		margin-bottom: 20px;
-	}
-	
-	h1, h2, h3, h4, h5, h6 {
-		font-size: 18px;
-	}
-	
-	.slider_arrow_left {
-		left: 10px;
-	}
-	.slider_arrow_right {
-		right: 10px;
-	}
-	.wrapper-padding {
-		padding: 5px;
-	}
-	#logo {
-		border-right: none;
-		text-align: center;
-	}
-	#logo img {
-		width: 55%
-	}
-	.logo__odesskiy img {
-		width: 45%;
-	}
-	.b-small {
-		padding: 10px 22px;
-		font-size: 14px;
-	}
-	.header__line {
-		background: none;
-		padding: 5px 0 0;
-	}
-	.language {
-		margin: 0;
-		text-align: center;
-	}
-	.header-social {
-		list-style: none;
-		margin: 0px;
-		padding: 0;
-		text-align: center;
-	}
-	.header-social li, .language li {
-		line-height: 22px;
-	}
-	.sec-title .separator:before {
-		width: 200px;
-	}
-	.btn__header {
-		margin-top: 0;
-	}
-	.b-small {
-		padding: 15px 19px;
-		font-size: 14px;
-	}
-	.navigation {
-		background: #fafafa;
-		margin: 0;
-	}
-	.navigation ul {
-		float: left;
-		width: 100%;
-		text-align: center;
-	}
-	.navigation li a {
-		display: inline-block;
-		padding: 5px 30px;
-		cursor: pointer;
-		font-size: 18px;
-	}
-	.navigation li a:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.navigation li .lnr {
-		font-size: 20px;
-	}
-	.navigation li.trigger-sbc span:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.sec-title .man-title, .sec-title h1, .sec-title h2, .sec-title h3, .sec-title h4 {
-		font-size: 24px;
-		padding: 0;
-	}
-	.slider-wrapper {
-		background-color: #1c1c1c;
-		background-position: center center;
-	}
-	.wrapper-slider_main {
-		padding: 0 100px;
-	}
-	.title-slider_main {
-		font-size: 30px;
-	}
-	.dpn-slider_main {
-		font-size: 18px;
-	}
-	.preim-title {
-		font-size: 17px;
-		padding: 0px;
-	}	
+
 }
 
 @media (max-width:599px) and (min-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:portrait) {
-	.feedback-control {
-		margin: 0px;
-		padding: 20px 0;
-	}
-	.b-large {
-		font-size: 14px;
-		padding: 12px 32px;
-	}
-	#map {
-		margin-bottom: 20px;
-	}
-	
-	h1, h2, h3, h4, h5, h6 {
-		font-size: 18px;
-	}
-	.slider_arrow_left {
-		left: 10px;
-	}
-	.slider_arrow_right {
-		right: 10px;
-	}
-	.slider-carousel .slider_arrow_left {
-		display: none;
-	}
-	.slider-carousel .slider_arrow_right {
-		display: none;
-	}	
-	.wrapper-padding {
-		padding: 5px;
-	}
-	#logo {
-		border-right: none;
-		text-align: center;
-	}
-	#logo img {
-		width: 75%
-	}
-	.header__line {
-		background: none;
-		padding: 5px 0 0;
-	}
-	.b-small {
-		padding: 10px 22px;
-		font-size: 14px;
-	}
-	.language {
-		margin: 0;
-		text-align: center;
-	}
-	.header-social {
-		list-style: none;
-		margin: 0px;
-		padding: 0;
-		text-align: center;
-	}
-	.header-social li, .language li {
-		line-height: 22px;
-	}
-	.sec-title .separator:before {
-		width: 200px;
-	}
-	.btn__header {
-		margin-top: 0;
-	}
-	.navigation {
-		background: #fafafa;
-		margin: 0;
-	}
-	.navigation ul {
-		float: left;
-		width: 100%;
-		text-align: center;
-	}
-	.navigation li a {
-		display: inline-block;
-		padding: 5px 30px;
-		cursor: pointer;
-		font-size: 18px;
-	}
-	.navigation li a:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.navigation li .lnr {
-		font-size: 20px;
-	}
-	.navigation li.trigger-sbc span:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.sec-title .man-title, .sec-title h1, .sec-title h2, .sec-title h3, .sec-title h4 {
-		font-size: 24px;
-		padding: 0;
-	}
-	.slider-wrapper {
-		background-color: #1c1c1c;
-		background-position: center center;
-	}
-	.wrapper-slider_main {
-		padding: 0 0;
-	}
-	.title-slider_main {
-		font-size: 26px;
-	}
-	.dpn-slider_main {
-		font-size: 18px;
-	}
-	.preim-title {
-		font-size: 18px;
-		padding: 0px;
-	}
+
 }
 
 @media (max-width:599px) and (min-width:320px) and (orientation:landscape) {
-	h1, h2, h3, h4, h5, h6 {
-		font-size: 18px;
-	}
-	#map {
-		margin-bottom: 20px;
-	}
-	.slider_arrow_left {
-		left: 10px;
-	}
-	.slider_arrow_right {
-		right: 10px;
-	}
-	.slider-carousel .slider_arrow_left {
-		display: none;
-	}
-	.slider-carousel .slider_arrow_right {
-		display: none;
-	}	
-	.wrapper-padding {
-		padding: 5px;
-	}
-	#logo {
-		border-right: none;
-		text-align: center;
-	}
-	#logo img {
-		width: 55%
-	}
-	.header__line {
-		background: none;
-		padding: 5px 0 0;
-	}
-	.language {
-		margin: 0;
-		text-align: center;
-	}
-	.header-social {
-		list-style: none;
-		margin: 0px;
-		padding: 0;
-		text-align: center;
-	}
-	.header-social li, .language li {
-		line-height: 22px;
-	}
-	.sec-title .separator:before {
-		width: 200px;
-	}
-	.btn__header {
-		margin-top: 0;
-	}
-	.navigation {
-		background: #fafafa;
-		margin: 0;
-	}
-	.navigation ul {
-		float: left;
-		width: 100%;
-		text-align: center;
-	}
-	.navigation li a {
-		display: inline-block;
-		padding: 5px 30px;
-		cursor: pointer;
-		font-size: 18px;
-	}
-	.navigation li a:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.navigation li .lnr {
-		font-size: 20px;
-	}
-	.navigation li.trigger-sbc span:hover {
-		text-decoration: none;
-		border: none;
-		color: #d1cfcf;
-	}
-	.sec-title .man-title, .sec-title h1, .sec-title h2, .sec-title h3, .sec-title h4 {
-		font-size: 24px;
-		padding: 0;
-	}
-	.slider-wrapper {
-		background-color: #1c1c1c;
-		background-position: center center;
-	}
-	.wrapper-slider_main {
-		padding: 0 0;
-	}
-	.title-slider_main {
-		font-size: 26px;
-	}
-	.dpn-slider_main {
-		font-size: 18px;
-	}
-	.preim-title {
-		font-size: 18px;
-		padding: 0px;
-	}
+	
 }
-
-@media (max-width:767px) and (min-width:600px) {
-    .cd-dropdown span {
-		height: 50px;
-		line-height: 50px;
-	}
-	.cd-dropdown .cd-close {
-		height: 50px;
-	}
-	.cd-dropdown-content, .cd-dropdown-content ul {
-		padding-top: 50px;
-	}
-}
-
-@media (max-width:599px) and (min-width:320px) and (orientation:portrait) {
-    .cd-dropdown span {
-		height: 50px;
-		line-height: 50px;
-	}
-	.cd-dropdown .cd-close {
-		height: 50px;
-	}
-	.cd-dropdown-content, .cd-dropdown-content ul {
-		padding-top: 50px;
-	}
-}
-
-@media (min-width:768px) {
-    .navbar-right .dropdown-menu {
-		left: auto;
-		right: 0;
-	}
-	.navbar-right .dropdown-menu-left {
-		left: 0;
-		right: auto;
-	}
-}
-@media only screen and (min-width:768px) {
-    .cd-dropdown .cd-close {
-		top: 0;
-	}
-	.cd-dropdown-content, .cd-dropdown-content ul {
-		padding-top: 50px;
-	}
-	.cd-dropdown-content a, .cd-dropdown-content ul a {
-		font-size: 18px;
-	}
-	.cd-dropdown span, .cd-dropdown-content a, .cd-dropdown-content ul a {
-		height: 50px;
-		line-height: 50px;
-	}
-	.cd-dropdown .cd-close {
-		height: 50px;
-	}
-}
-
 @media (max-width:599px) and (min-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:portrait) {
     #cart-modal-form.reveal-modal, #checks.reveal-modal, #click.reveal-modal, #zvonok.reveal-modal {
 		width: 100%;
