--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -6,8 +6,9 @@ $global-text-color:       #2a2a2a; // Цвет текста
 $global-shade-color:      #dbdbdb; // Цвет оттенок
 $global-link-color:       #0b1875; // Цвет ссылок
 $global-link-hover:       #2a2a2a; // Hover ссылок
-$global-bg-background:    #0b1875;  // Заливка цветов
-$global-bg-opacity:       rgba(11, 24, 117, 0.55); // Прозрачность слайдера - hover
+$global-bg-background:    #474747;  //#0b1875 Заливка цветов
+$global-bg-opacity:       rgba(71, 71, 71, 0.55);  // rgba(71, 71, 71, 0.55)  Прозрачность слайдера - hover
+$global-bg-respnav:       rgba(71, 71, 71, 0.85);  // Заливка responsive nav
 $global-nav-fixed-bg:     #f6f6f6; // Цвет фона nav-fixed
 $global-footer-bg:        #474747; // Заливка футера
 $global-box-shadow-45:    0px 0px 15px 0px rgba(123, 123, 123, 0.45); // box-shadow 45%
