--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -11,9 +11,9 @@
                     </ul>
                     <ul class="header__social">	
                         <li><a title="Facebook" target="_blank" href="https://www.facebook.com/"><img width="24px" src="/images/social_icon/facebook.svg"></a></li>
-                        <li><a title="Instagram" target="_blank" href="https://www.instagram.com/"><img width="24px" src="/images/social_icon/instagram.svg"></a></li>
                         <li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="/images/social_icon/viber.svg"></a></li>
-                        <li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="/images/social_icon/viber.svg"></a></li>				
+                        <li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="/images/social_icon/viber.svg"></a></li>                   
+                        <li><a title="Instagram" target="_blank" href="https://www.instagram.com/"><img width="24px" src="/images/social_icon/instagram.svg"></a></li>
                         <li><a href="https://t.me/maxisolar" class="telegram" title="Telegram" target="_blank"><img width="24px" src="/images/social_icon/telegram.svg"></a></li>
                     </ul>
                     <ul class="header__language">
@@ -37,19 +37,15 @@
                     </a>
                 </div> 
                 <nav class="navigation">
-                    <div class="nav-mobile">
+                    <div class="nav__mobile">
                        <a class="navbar__open"><span></span> <i>Навигация</i></a>
                     </div>
                     <ul class="navigation__mobile">
-                        <li class="dropdown">
+                        <li>
                             <a class="dropdown-link" href="#" title="О компании">О компании</a>
-                            <ul>
-                                <li><a href="#" title="Сервис и обслуживание">Новости</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Вопрос / ответ</a></li>
-                            </ul>
                         </li>
                         <li class="dropdown">
-                            <a class="dropdown-link" href="#" title="Наши услуги">Наши услуги</a>
+                            <a class="dropdown-link" href="#" title="Наши услуги">Услуги</a>
                             <ul>
                                 <li><a href="#" title="Сервис и обслуживание">Частные солнечные электростанции</a></li>
                                 <li><a href="#" title="Сервис и обслуживание">Коммерческие солнечные электростанции</a></li>
