--- a/app/template/_advantages.html
+++ b/app/template/_advantages.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p4.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_1.png">
 					<div class="title">
 						<p>Профессионализм</p>
 					</div>
@@ -24,7 +24,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p1.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_2.png">
 					<div class="title">
 						<p>Качество</p>
 					</div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p5.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_3.png">
 					<div class="title">
 						<p>Полный сервис</p>
 					</div>
@@ -42,7 +42,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p2.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_6.png">
 					<div class="title">
 						<p>Оборудование</p>
 					</div>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p6.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_4.png">
 					<div class="title">
 						<p>Лучшая цена</p>
 					</div>
@@ -60,7 +60,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_p3.png">
+					<img width="70px" alt="Солнечные электростанции: компания «Maxisolar»" src="/images/ico_5.png">
 					<div class="title">
 						<p>Точно в срок</p>
 					</div>
