--- a/app/template/_footer.html
+++ b/app/template/_footer.html
@@ -36,12 +36,12 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12 center">
-				<ul class="footer-social">	
+				<ul class="footer__social">	
 					<li>Задайте вопрос в мессенджере: </li>
 					<li><a class="facebook" title="Facebook" target="_blank" href="https://www.facebook.com/"><img src="/images/social_icon/facebook.svg"></a></li>
-					<li><a class="instagram" title="Instagram" target="_blank" href="https://www.instagram.com/"><img src="/images/social_icon/instagram.svg"></a></li>
 					<li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>
-					<li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>				
+					<li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>
+					<li><a class="instagram" title="Instagram" target="_blank" href="https://www.instagram.com/"><img src="/images/social_icon/instagram.svg"></a></li>
 					<li><a href="https://t.me/maxisolar" class="telegram" title="Telegram" target="_blank"><img src="/images/social_icon/telegram.svg"></a></li>
 				</ul>
 				<div class="copyright">© 2020, Компания «Maxisolar». Все права защищены</div>
