--- a/app/template/_services.html
+++ b/app/template/_services.html
@@ -17,7 +17,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".9s" data-wow-delay=".2s">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_2.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_11.svg">
 						</a>
 						<div class="title">
 							<a href="/">Частные солнечные электростанции</a>
@@ -29,7 +29,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 center">
 					<div class="col__services border">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_1.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_21.svg">
 						</a>
 						<div class="title">
 							<a href="/">Коммерческие солнечные электростанции</a>
@@ -41,7 +41,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".9s" data-wow-delay=".2s">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_5.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_31.svg">
 						</a>
 						<div class="title">
 							<a href="/">Автономное и резервное электроснабжение</a>
@@ -58,7 +58,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_3.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_41.svg">
 						</a>
 						<div class="title">
 							<a href="/">«Зеленый» тариф</a>
@@ -70,7 +70,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeIn center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="180">
 					<div class="col__services border">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_6.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_51.svg">
 						</a>
 						<div class="title">
 							<a href="/">Электромонтажные работы</a>
@@ -82,7 +82,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/icon_4.png">
+							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_61.svg">
 						</a>
 						<div class="title">
 							<a href="/">Гарантия и сервис</a>
